About Section Done

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="details-container">
                         <img 
                             src="./assets/experience.png"
-                            alt="Experiance icon"
+                            alt="Experience icon"
                             class = "icon"
                         />
                         <h3>Experience</h3>
@@ -125,8 +125,11 @@
             class="icon arrow"
             onclick="location.href='./#experience'"
         />
-        
     </section>
+
+    
+
+
 
 
     <script src="script.js"></script>
