--- a/index.html
+++ b/index.html
@@ -127,7 +127,36 @@
         />
     </section>
 
-    
+    <section id="experience">
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience</h1>
+        <div class="experience-container">
+            <div class="skills-container">
+                <p> Frontend Developmenet</p>
+                <div class="skill-list">
+                    <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>SASS</li>
+                        <li>JavaScript</li>
+                        <li>TypeScript</li>
+                        <li>Material UI</li>
+                    </ul>
+                </div>
+            </div>
+            <p> Frontend Developmenet</p>
+            <div class="skills-container">
+                <div class="skill-list">
+                    <ul>
+                        <li>PostgreSQL</li>
+                        <li>Node JS</li>
+                        <li>Express JS</li>
+                        <li>Git</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
