--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 
     <body>
         <nav id="desktop-nav">
-            <!-- This is a comment -->
-            <div class="logo">John Doe</div>
+            <div class="logo">Omar Takleh</div>
             <div>
                 <ul class="nav-links">
                     <li><a href="#about">About</a></li>
@@ -23,7 +22,7 @@
         </nav>
         <nav id="hamburger-nav">
             <!-- Mobile Menu -->
-            <div class="logo">John Doe</div>
+            <div class="logo">Omar Takleh</div>
             <div class="hamburger-menu">
                 <div class="hamburger-icon" onclick="toggleMenu()">
                     <span></span>
@@ -51,13 +50,13 @@
             <div class="section__pic-container">
                 <img
                     src="./assets/profile-pic.png"
-                    alt="John Doe profile picture"
+                    alt="Omar Takleh Profile Picture"
                 />
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello, I am</p>
-                <h1 class="title">John Doe</h1>
-                <p class="section__text__p2">Frontend Developer</p>
+                <h1 class="title">Omar Takleh</h1>
+                <p class="section__text__p2">Undergraduate Student</p>
                 <div class="btn-container">
                     <button
                         class="btn btn-color-2"
@@ -127,14 +126,7 @@
                     </div>
                     <div class="text-container">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Hic quis reprehenderit et laborum, rem, dolore
-                            eum quod voluptate exercitationem nobis, nihil esse
-                            debitis maxime facere minus sint delectus velit in
-                            eos quo officiis explicabo deleniti dignissimos.
-                            Eligendi illum libero dolorum cum laboriosam
-                            corrupti quidem, reiciendis ea magnam? Nulla,
-                            impedit fuga!
+                            As a dedicated Computer Science student at the University of Derby, I am committed to achieving excellence and continuously improving my skills. Hardworking and proficient in many modern technologies, I have a strong passion for learning and technology. In my first-year modules, I excelled, achieving an impressive average of 92%, well above the 70% needed for a First-Class Honours degree.
                         </p>
                     </div>
                 </div>
@@ -416,7 +408,7 @@
                     </ul>
                 </div>
             </nav>
-            <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+            <p>Copyright &#169; 2023 Omar Takleh. All Rights Reserved.</p>
         </footer>
         <script src="script.js"></script>
     </body>
