some chnages done

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <section id="profile">
             <div class="section__pic-container">
                 <img
-                    src="./assets/profile-pic.png"
+                    src="./assets/Omar/PNG/Serious Cricle.png"
                     alt="Omar Takleh Profile Picture"
                 />
             </div>
@@ -126,7 +126,9 @@
                     </div>
                     <div class="text-container">
                         <p>
-                            As a dedicated Computer Science student at the University of Derby, I am committed to achieving excellence and continuously improving my skills. Hardworking and proficient in many modern technologies, I have a strong passion for learning and technology. In my first-year modules, I excelled, achieving an impressive average of 92%, well above the 70% needed for a First-Class Honours degree.
+                            As a dedicated Computer Science student at the University of Derby, I am committed to achieving excellence and continuously improving my skills.
+                             Hardworking and proficient in many modern technologies, with a strong passion for learning and technology.
+                            In my first-year modules, I excelled, achieving an impressive average of 92%, well above the 70% needed for a First-Class Honours degree.
                         </p>
                     </div>
                 </div>
@@ -382,8 +384,8 @@
                         class="icon contact-icon email-icon"
                     />
                     <p>
-                        <a href="mailto:examplemail@gmail.com"
-                            >Example@gmail.com</a
+                        <a href="mailto:o.takleh1@gmail.com"
+                            >o.takleh1@gmail.com</a
                         >
                     </p>
                 </div>
@@ -393,7 +395,7 @@
                         alt="LinkedIn icon"
                         class="icon contact-icon"
                     />
-                    <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+                    <p><a href="https://www.linkedin.com/in/omar-t/">LinkedIn</a></p>
                 </div>
             </div>
         </section>
@@ -408,7 +410,7 @@
                     </ul>
                 </div>
             </nav>
-            <p>Copyright &#169; 2023 Omar Takleh. All Rights Reserved.</p>
+            <p>Copyright &#169; 2024 Omar Takleh. All Rights Reserved.</p>
         </footer>
         <script src="script.js"></script>
     </body>
