--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="section__pic-container">
                     <!-- Space on id can be a problem -->
                     <img
-                        src="./assets/about-pic.png"
+                        src="./assets/Omar/PNG/laugh Done.png"
                         alt="Profile picture"
                         class="about-pic"
                     />
