--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
                                 class="icon"
                             />
                             <h3>Experience</h3>
-                            <p>2+ years <br />Frontend Development</p>
+                            <p>Maths Mentor, Assistant Accountant,
+                                Warhouse Operative, and  Sales Assistant </p>
                         </div>
                         <div class="details-container">
                             <img
                                 src="./assets/education.png"
-                                alt="Experiance icon"
+                                alt="Education icon"
                                 class="icon"
                             />
                             <h3>Education</h3>
                             <p>
-                                B.Sc. Bachelors Degree <br />
-                                M.Sc. Masters Degree
-                            </p>
+                                A-levels <br />
+                                B.Sc. Computer Science (92% Average)                           </p>
                         </div>
                     </div>
                     <div class="text-container">
