--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 <div class="about-containers">
                     <div class="details-container">
                         <h2 class="experience-sub-title">
-                            Frontend Development
+                            Programming Languages
                         </h2>
                         <div class="article-container">
                             <article>
@@ -158,8 +158,30 @@
                                     class="icon"
                                 />
                                 <div>
+                                    <h3>Python</h3>
+                                    <p>Advanced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>C++</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
                                     <h3>HTML</h3>
-                                    <p>Experienced</p>
+                                    <p>Intermediate</p>
                                 </div>
                             </article>
                             <article>
@@ -169,18 +191,7 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>CSS</h3>
-                                    <p>Experienced</p>
-                                </div>
-                            </article>
-                            <article>
-                                <img
-                                    src="./assets/checkmark.png"
-                                    alt="Experience icon"
-                                    class="icon"
-                                />
-                                <div>
-                                    <h3>SASS</h3>
+                                    <h3>VBA</h3>
                                     <p>Intermediate</p>
                                 </div>
                             </article>
@@ -202,26 +213,16 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>TypeScript</h3>
+                                    <h3>CSS </h3>
                                     <p>Basic</p>
                                 </div>
                             </article>
-                            <article>
-                                <img
-                                    src="./assets/checkmark.png"
-                                    alt="Experience icon"
-                                    class="icon"
-                                />
-                                <div>
-                                    <h3>Material UI</h3>
-                                    <p>Intermediate</p>
-                                </div>
-                            </article>
+
                         </div>
                     </div>
                     <div class="details-container">
                         <h2 class="experience-sub-title">
-                            Frontend Development
+                            Technologies
                         </h2>
                         <div class="article-container">
                             <article>
@@ -231,18 +232,7 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>PostgreSQL</h3>
-                                    <p>Basic</p>
-                                </div>
-                            </article>
-                            <article>
-                                <img
-                                    src="./assets/checkmark.png"
-                                    alt="Experience icon"
-                                    class="icon"
-                                />
-                                <div>
-                                    <h3>Node JS</h3>
+                                    <h3>Unreal Engine</h3>
                                     <p>Intermediate</p>
                                 </div>
                             </article>
@@ -253,8 +243,8 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>Express JS</h3>
-                                    <p>Intermediate</p>
+                                    <h3>MS Access</h3>
+                                    <p>Advanced</p>
                                 </div>
                             </article>
                             <article>
@@ -265,7 +255,7 @@
                                 />
                                 <div>
                                     <h3>Git</h3>
-                                    <p>Intermediate</p>
+                                    <p>Basic</p>
                                 </div>
                             </article>
                         </div>
@@ -283,6 +273,9 @@
         <section id="projects">
             <p class="section__text__p1">Browse My Recent</p>
             <h1 class="title">Projects</h1>
+            <div class="Temp">
+                <p class="Under-dev">Temporarily Unavailable</p>
+            </div>
             <div class="experience-details-container">
                 <div class="about-containers">
                     <div class="details-container color-container">
