Formatted with Prettier

--- a/index.html
+++ b/index.html
@@ -109,8 +109,10 @@
                                 class="icon"
                             />
                             <h3>Experience</h3>
-                            <p>Maths Mentor, Assistant Accountant,
-                                Warhouse Operative, and  Sales Assistant </p>
+                            <p>
+                                Maths Mentor, Assistant Accountant, Warhouse
+                                Operative, and Sales Assistant
+                            </p>
                         </div>
                         <div class="details-container">
                             <img
@@ -121,14 +123,20 @@
                             <h3>Education</h3>
                             <p>
                                 A-levels <br />
-                                B.Sc. Computer Science (92% Average)                           </p>
+                                B.Sc. Computer Science (92% Average)
+                            </p>
                         </div>
                     </div>
                     <div class="text-container">
                         <p>
-                            As a dedicated Computer Science student at the University of Derby, I am committed to achieving excellence and continuously improving my skills.
-                             Hardworking and proficient in many modern technologies, with a strong passion for learning and technology.
-                            In my first-year modules, I excelled, achieving an impressive average of 92%, well above the 70% needed for a First-Class Honours degree.
+                            As a dedicated Computer Science student at the
+                            University of Derby, I am committed to achieving
+                            excellence and continuously improving my skills.
+                            Hardworking and proficient in many modern
+                            technologies, with a strong passion for learning and
+                            technology. In my first-year modules, I excelled,
+                            achieving an impressive average of 92%, well above
+                            the 70% needed for a First-Class Honours degree.
                         </p>
                     </div>
                 </div>
@@ -213,17 +221,14 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>CSS </h3>
+                                    <h3>CSS</h3>
                                     <p>Basic</p>
                                 </div>
                             </article>
-
                         </div>
                     </div>
                     <div class="details-container">
-                        <h2 class="experience-sub-title">
-                            Technologies
-                        </h2>
+                        <h2 class="experience-sub-title">Technologies</h2>
                         <div class="article-container">
                             <article>
                                 <img
@@ -388,7 +393,11 @@
                         alt="LinkedIn icon"
                         class="icon contact-icon"
                     />
-                    <p><a href="https://www.linkedin.com/in/omar-t/">LinkedIn</a></p>
+                    <p>
+                        <a href="https://www.linkedin.com/in/omar-t/"
+                            >LinkedIn</a
+                        >
+                    </p>
                 </div>
             </div>
         </section>
