Last Update (READY)
Resume updated
Picture background updated

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <div class="btn-container">
                     <button
                         class="btn btn-color-2"
-                        onclick="window.open('./assets/resume-example.pdf')"
+                        onclick="window.open('./assets/Omar_s_Tech_Resume_24_25_READY.pdf')"
                     >
                         Download Resume
                     </button>
@@ -279,7 +279,7 @@
             <p class="section__text__p1">Browse My Recent</p>
             <h1 class="title">Projects</h1>
             <div class="Temp">
-                <p class="Under-dev">Temporarily Unavailable</p>
+                <p class="Under-dev">Temporarily Unavailable <br> Coming Soon </p>
             </div>
             <div class="experience-details-container">
                 <div class="about-containers">
