Phone Picture Good for now
Need to make a top-pic-container then do the styling in the one below. thats the best long term solution

--- a/index.html
+++ b/index.html
@@ -47,12 +47,14 @@
         </nav>
 
         <section id="profile">
-            <div class="section__pic-container">
-                <img
-                    src="./assets/Omar/PNG/Serious Cricle.png"
-                    alt="Omar Takleh Profile Picture"
-                />
-            </div>
+            <!-- <div class="top-pic-container"> -->
+                <div class="section__pic-container">
+                    <img
+                        src="./assets/Omar/PNG/Serious Cricle.png"
+                        alt="Omar Takleh Profile Picture"
+                    />
+                </div>
+            <!-- </div> -->
             <div class="section__text">
                 <p class="section__text__p1">Hello, I am</p>
                 <h1 class="title">Omar Takleh</h1>
