--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
                             />
                             <h3>Experience</h3>
                             <p>
-                                Maths Mentor, Assistant Accountant, Warhouse
-                                Operative, and Sales Assistant
+                                Software Developer, Game Developer, Database Designer, Computer Science Student
                             </p>
                         </div>
                         <div class="details-container">
@@ -190,7 +189,18 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>HTML</h3>
+                                    <h3>Haskell</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>SQL</h3>
                                     <p>Intermediate</p>
                                 </div>
                             </article>
@@ -212,8 +222,24 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>JavaScript</h3>
-                                    <p>Basic</p>
+                                    <h3>HTML/CSS</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="details-container">
+                        <h2 class="experience-sub-title">Technologies</h2>
+                        <div class="article-container">
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>Microsoft Access</h3>
+                                    <p>Advanced</p>
                                 </div>
                             </article>
                             <article>
@@ -223,15 +249,10 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>CSS</h3>
-                                    <p>Basic</p>
+                                    <h3>GitHub</h3>
+                                    <p>Intermediate</p>
                                 </div>
                             </article>
-                        </div>
-                    </div>
-                    <div class="details-container">
-                        <h2 class="experience-sub-title">Technologies</h2>
-                        <div class="article-container">
                             <article>
                                 <img
                                     src="./assets/checkmark.png"
@@ -250,8 +271,8 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>MS Access</h3>
-                                    <p>Advanced</p>
+                                    <h3>Visual Studio</h3>
+                                    <p>Intermediate</p>
                                 </div>
                             </article>
                             <article>
@@ -261,10 +282,22 @@
                                     class="icon"
                                 />
                                 <div>
-                                    <h3>Git</h3>
-                                    <p>Basic</p>
+                                    <h3>CISCO Packet Tracer</h3>
+                                    <p>Intermediate</p>
                                 </div>
                             </article>
+                            <article>
+                                <img
+                                    src="./assets/checkmark.png"
+                                    alt="Experience icon"
+                                    class="icon"
+                                />
+                                <div>
+                                    <h3>Microsoft SQL Server</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+
                         </div>
                     </div>
                 </div>
