--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div class="btn-container">
                     <button
                         class="btn btn-color-2"
-                        onclick="window.open('./assets/Omar_s_Tech_Resume_24_25_READY.pdf')"
+                        onclick="window.open('./assets/24_25 Final Resume (No Phone).pdf')"
                     >
                         Download Resume
                     </button>
@@ -112,7 +112,7 @@
                             />
                             <h3>Experience</h3>
                             <p>
-                                Software Developer, Game Developer, Database Designer, Computer Science Student
+                                Software, Game, Database, Client-Server Devoplement, Computer Science Student
                             </p>
                         </div>
                         <div class="details-container">
