Projects Update YT and GitHub

--- a/index.html
+++ b/index.html
@@ -316,7 +316,10 @@
             <div class="Temp">
                 <p class="Under-dev">
                     Temporarily Unavailable <br />
-                    Coming Soon
+                    Check my  
+                    <a href="https://github.com/e4omar">GitHub</a>, 
+                    <a href="https://youtu.be/bVFUemoJn6Q">YouTube</a>
+
                 </p>
             </div>
             <div class="experience-details-container">
